# mcp-server

./: .env  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.ui  LICENSE  README.md  docker-compose.yml  env.example.txt  pyproject.toml  requirements.txt
backend/: config.py  dependencies.py  events.py  memory.py  prompt_builder.py  prompt_cache.py  server.py
backend/providers/: __init__.py  anthropic.py  base.py  grok.py  ollama.py  openai.py  xai.py
backend/tools/: __init__.py  context.py  loader.py  registry.py  session_manager.py  state.py
backend/tools/definitions/core/: calculate.json  clear_active_model.json  clear_active_provider.json  echo.json  get_public_ip.json  (+15 more)
backend/tools/executors/: core.py  memory.py  persona.py  sessions.py  skill.py  task.py  web.py
backend/tools/repositories/: persona_repository.py  skill_repository.py
backend/tools/scripts/: README.md  assign_categories.py  migrate_add_session_context.py
frontend/: client.py  gradio_app.py  layout.py  style.css
frontend/cli/: test_stream.py
frontend/components/: __init__.py  chat_handler.py  chat_panel.py  event_wiring.py  mcp_client.py  memory_panel.py  persona_control.py  prompt_viewer.py  sessions_panel.py  skill_control.py  status_bar.py  tools_panel.py
prompts/: system_prompt_anthropic.md  system_prompt_grok.md  system_prompt_ollama.md  system_prompt_openai.md
prompts/personas/: bodensee_alemanne.md  comedian.md  detective.md  pirate.md  professor.md
prompts/skills/: comic_glitch_creator.md  long_running_autonomous.md  recherche_nachrichten_deutschland.md
(+31 files in other folders)
