[project]
name = "mcp-server"
version = "1.1.0"
description = "Grok 4.3 MCP Server with persistent SQLite + sqlite-vec chat memory"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "playwright>=1.59.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "openai>=2.36.0",      
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "sqlite-vec>=0.1.0",
    "numpy>=1.26.0",
    "ollama>=0.3.0",
    "gradio==6.2.0",
    "anthropic>=0.45.0",
]

[dependency-groups]
dev = []
